--- a/templates/user_commits.html
+++ b/templates/user_commits.html
@@ -32,16 +32,7 @@
           <Group>
         </intro>
         <Lead ornull>
-        <For JournalRows>
-          <journal>
-            <span><a href="/repo/<Repo>/commit/<Sha>"><Sha></a>: <Title></span>
-            <span>
-              <span>in <a href="/repo/<Repo>"><Repo></a></span>
-              <span>on <span><Day /></span><span><Weekday /></span><span><Time /></span></span>
-            </span>
-            <!--span><Sha></span-->
-          </journal>
-        </For>
+        <For JournalRows use="_short_commit_line.html"></For>
       </div>
     </For>
     </content>
