--- a/static/main.css
+++ b/static/main.css
@@ -822,6 +822,18 @@ blob {
 	}
 }
 
+.verse-stats-line {
+	&.verse-bot {
+		background-color: #333;
+		color: #888;
+	}
+	&.verse-stats-200 td:nth-child(4) {
+		color: green;
+	}
+	&.verse-stats-500 td:nth-child(4) {
+		color: red;
+	}
+}
 
 pre { line-height: 125%; }
 td.linenos .normal { color: inherit; background-color: transparent; padding-left: 5px; padding-right: 5px; }
