html fixes found while debuging verse/zig ptr bug

--- a/templates/commit.html
+++ b/templates/commit.html
@@ -15,7 +15,7 @@
           <data>
             <a href="/repo/<Repo />/commit/<ShaShort>"><ShaShort></a><br>
             <Title><br><br>
-            <Body />
+            <Body ornull />
           </data>
         </commit>
       </With>
