fix commit view href

--- a/templates/tree.html
+++ b/templates/tree.html
@@ -19,7 +19,7 @@
         <h3><RepoName/></h3>
         <span><BranchCount type="usize" /> branches</span>
         <span><CommitSlug /></span>
-        <span class="muted"><CommitTimeHuman/>&nbsp;<a href="/repo/<RepoName />/<CommitHex/>"><CommitHexShort /></a></span>
+        <span class="muted"><CommitTimeHuman/>&nbsp;<a href="/repo/<RepoName />/commit/<CommitHexShort/>"><CommitHexShort /></a></span>
         </intro>
         <div class="treelist">
           <With DotDot><tree><a href="<Href />">..</a></tree></With>
