make blob work with ref

--- a/templates/blob.html
+++ b/templates/blob.html
@@ -7,8 +7,8 @@
     <Build BodyHeader _body_header.html />
     <content>
       <blob>
-        <a class="btn" href="/repo/<Repo>/blame/<UriFilename>">blame</a>
-        <header><Filename></header>
+        <a class="btn" href="/repo/<Repo />/blame/<UriFilename />">blame</a>
+        <header><Filename /></header>
         <div class="codeblock"><code><For BlobLines>
 <ln num="<Num type=usize >" id="L<Num type=usize >" href="#L<Num type=usize >"><Line /></ln>
 </For></code>
