--- a/static/main.css
+++ b/static/main.css
@@ -33,8 +33,17 @@ a {
 
 h1,h2,h3 { margin: 0 }
 
+.tree-header {
+	display: flex;
+	h3 {
+		font-family: 'Titillium Web', sans-serif;
+		font-size: 220%;
+		margin: 0 auto 0 0;
+	}
+}
+
 .act-btns {
-	display: block;
+	display: inline-block;
 	margin: 0 0 16px;
 	text-align: right;
 }
@@ -235,10 +244,6 @@ repo {
 		border-radius: 4px 4px 0 0;
 		/* border: 1px solid #808080; */
 		intro {
-			span:first-child{
-				font-family: 'Titillium Web', sans-serif;
-				font-size: 120%;
-			}
 			border-radius: 4px 4px 0 0;
 			padding: 10px;
 			background: #333;
@@ -246,6 +251,13 @@ repo {
 			justify-content: space-between;
 			align-items: baseline;
 			text-align: left;
+			span:first-child {
+				min-width: 30%;
+			}
+			span:nth-child(2) {
+				display: flex;
+				flex-grow:1;
+			}
 		}
 
 	}
@@ -310,7 +322,7 @@ readme {
 		display: flex;
 		justify-content: flex-start;
 		> a {
-			min-width: 25%;
+			min-width: 30%;
 			display: inline-block;
 		}
 		&:first-child { border-top: 0px solid gray; }
