--- a/templates/blame.html
+++ b/templates/blame.html
@@ -11,10 +11,10 @@
         <div class="codeblock">
         <code>
           <For BlameLines><span class="blame-line">
-            <span class="blame-header">
+            <span class="blame-header<TimeStyle ornull />">
               <time><Time ornull></time>
-              <a href="/repo/<RepoName>/commit/<Sha>"><Sha>&nbsp;</a>
-              <With AuthorEmail><author class="muted"><a href="/user?user=<Email>"><Author></a></author></With>
+              <a href="/repo/<RepoName>/commit/<Sha>"><MSha ornull>&nbsp;</a>
+              <With AuthorEmail><author class="muted"><a href="/user?user=<Email>"><Author ornull/></a></author></With>
             </span>
             <ln num="<Num type=usize >" id="L<Num type=usize >" href="#L<Num type=usize >"><Line></ln>
           </span></For>
