make git blame work with ref's & add skip link

--- a/templates/blame.html
+++ b/templates/blame.html
@@ -12,6 +12,7 @@
         <code>
           <For BlameLines><span class="blame-line">
             <span class="blame-header<TimeStyle ornull />">
+              <span><a href="<BlameSkipHref />">&lt;|&nbsp;</a></span>
               <time><Time ornull></time>
               <a href="/repo/<RepoName>/commit/<Sha>"><MSha ornull>&nbsp;</a>
               <With AuthorEmail><author class="muted"><a href="/user?user=<Email>"><Author ornull/></a></author></With>
