add full sha to commit view

--- a/templates/commit.html
+++ b/templates/commit.html
@@ -13,7 +13,7 @@
             <span>parent <For Parents><a href="/repo/<Repo />/commit/<ParentShaShort />"><ParentShaShort /></a> </For></span>
           </top>
           <data>
-            <a href="/repo/<Repo />/commit/<ShaShort>"><ShaShort></a><br>
+            <a href="/repo/<Repo />/commit/<ShaShort>"><Sha /></a><br>
             <Title><br><br>
             <Body ornull />
           </data>
