add repo/branches endpoint

--- a/templates/blob.html
+++ b/templates/blob.html
@@ -9,9 +9,7 @@
       <div class="blob-header">
         <h3><RepoName/></h3>
         <div class="act-btns">
-          <With Upstream>
-          <a class="btn" href="<Uri>">Go To Upstream</a>
-          </With>
+          <With Upstream><a class="btn" href="<Href>">Go To Upstream</a></With>
           <a class="btn" href="/repo/<RepoName />/blame/<UriFilename />">Blame</a>
           <a class="btn" href="/repo/<RepoName />/issues/new">New Issue</a>
           <a class="btn" href="/repo/<RepoName />/diffs/new">New Diff</a>
