--- a/templates/tree.html
+++ b/templates/tree.html
@@ -9,9 +9,7 @@
       <div class="tree-header">
         <h3><RepoName/></h3>
         <div class="act-btns">
-          <With Upstream>
-          <a class="btn" href="<Uri>">Go To Upstream</a>
-          </With>
+          <With Upstream><a class="btn" href="<Href>">Go To Upstream</a></With>
           <a class="btn" href="/repo/<RepoName>/commits">commits</a>
           <a class="btn" href="/repo/<RepoName>/issues/new">New Issue</a>
           <a class="btn" href="/repo/<RepoName>/diffs/new">New Diff</a>
@@ -19,7 +17,7 @@
       </div>
       <repo class="landing">
         <intro>
-        <span><BranchCount type="usize" /> branches</span>
+        <span><a href="/repo/<RepoName />/branches"><BranchCount type="usize" /> branches</a></span>
         <span><CommitSlug /></span>
         <span class="muted"><CommitTimeHuman/>&nbsp;<a href="/repo/<RepoName />/commit/<CommitHexShort/>"><CommitHexShort /></a></span>
         </intro>
