--- a/templates/branches.html
+++ b/templates/branches.html
@@ -15,13 +15,11 @@
           <a class="btn" href="/repo/<RepoName>/diffs/new">New Diff</a>
         </div>
       </div>
-
       <ol>
       <For RepoBranches>
-        <li><Name > -- <Sha /></li> 
+        <li><Name > -- <a href="ref/<Sha />"><Sha /></a></li>
       </For>
       </ol>
-
     </content>
   </body>
 </html>
