--- a/templates/commit.html
+++ b/templates/commit.html
@@ -5,7 +5,7 @@
   </head>
   <body>
     <Build BodyHeader _body_header.html />
-    <content>
+    <content class="full">
       <With Commit>
         <commit>
           <top>
