use verse dom.render

--- a/templates/_patch.html
+++ b/templates/_patch.html
@@ -5,7 +5,7 @@
 	    <strong><DiffStat /></strong>
           </header>
           <changes>
-            <Split DiffLines />
+            <DiffLines />
           </changes>
         </patch>
         </For>
