use html <Slice> network on network page

--- a/templates/network.html
+++ b/templates/network.html
@@ -6,7 +6,7 @@
   <body>
     <Build BodyHeader _body_header.html />
     <content>
-      <Netlist>
+      <Split Netlist />
     </content>
   </body>
 </html>
