--- a/templates/tree.html
+++ b/templates/tree.html
@@ -7,13 +7,7 @@
     <Build BodyHeader _body_header.html />
     <content class="mw">
       <div class="tree-header">
-        <h3><RepoName/></h3>
-        <div class="act-btns">
-          <With Upstream><a class="btn" href="<Href>">Go To Upstream</a></With>
-          <a class="btn" href="/repo/<RepoName>/commits">commits</a>
-          <a class="btn" href="/repo/<RepoName>/issues/new">New Issue</a>
-          <a class="btn" href="/repo/<RepoName>/diffs/new">New Diff</a>
-        </div>
+        <Build TreeBlobHeader _tree_blob_header.html />
       </div>
       <repo class="landing">
         <intro>
