add repo header to commit view

--- a/templates/_tree_blob_header.html
+++ b/templates/_tree_blob_header.html
@@ -1,4 +1,4 @@
-        <h3><RepoName/></h3>
+        <h3><a href="/repo/<RepoName />"><RepoName/><a></h3>
         <With GitUri><span class="gituri">git clone https://<Host />/repo/<RepoName /></span></With>
         <div class="act-btns">
           <With Upstream><a class="btn" href="<Href>">Go To Upstream</a></With>
