--- a/templates/commit.html
+++ b/templates/commit.html
@@ -6,6 +6,9 @@
   <body>
     <Build BodyHeader _body_header.html />
     <content class="full">
+      <div class="tree-header">
+        <Build TreeBlobHeader _tree_blob_header.html />
+      </div>
       <With Commit>
         <commit>
           <top>
