--- a/templates/network.html
+++ b/templates/network.html
@@ -6,7 +6,7 @@
   <body>
     <Build BodyHeader _body_header.html />
     <content>
-      <Split Netlist />
+      <Netlist />
     </content>
   </body>
 </html>
