--- a/templates/_patch.html
+++ b/templates/_patch.html
@@ -1,7 +1,7 @@
 	<For Files>
         <patch>
           <header>
-            <Filename />
+            <span><Filename /></span>
 	    <strong><DiffStat /></strong>
           </header>
           <changes>
