--- a/templates/blob.html
+++ b/templates/blob.html
@@ -10,10 +10,9 @@
         <Build TreeBlobHeader _tree_blob_header.html />
       </div>
       <blob>
-        <header><Filename /></header>
+        <header><span><Filename /></span></header>
         <div class="codeblock"><code><For BlobLines>
-<ln num="<Num type=usize >" id="L<Num type=usize >" href="#L<Num type=usize >"><Line /></ln>
-</For></code>
+<ln num="<Num type=usize >" id="L<Num type=usize >" href="#L<Num type=usize >"><Line /></ln></For></code>
         </div>
       </blob>
     </content>
